# conditional-s3-fetch

./: Cargo.toml  Makefile  README.md
.github/workflows/: cross_compile.yml
examples/: docker-compose.yaml  watcher.rs
examples/minio/: .gitignore  entrypoint.sh
examples/minio/example/: hello.cbor  hello.json
src/: cbor.rs  edn.rs  json.rs  lib.rs
tests/: cbor.rs  file_fetch.rs  json.rs
